[Sultan] - Fixed catComb rendering and all three rendering in coversheet. Register and Codesheet are pending

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -61,6 +61,10 @@ input.clean {
   margin-right : 2mm !important;
 }
 
+.yesno {
+  padding-top: 3mm;
+  display : inline-block;
+}
 .option {
   //width  : 5cm;
   //height : 9mm;
@@ -73,7 +77,7 @@ input.clean {
 }
 
 .optionsetTable td {
-  //padding-right : 10mm;
+  padding-left : 5mm;
 }
 
 .spinner-wrapper img {
