--- a/src/scss/dataset.scss
+++ b/src/scss/dataset.scss
@@ -23,14 +23,15 @@
 }
 
 .deField {
-  width         : 20%;
+  //width         : 20%;
   display       :inline-block;
   border-bottom : 1px solid black;
 }
 
 .deFieldCatComb {
-  width         : 4cm;
-  border-bottom : 1px solid black;
+  //width         : 4cm;
+  display : inline-block;
+
 }
 
 .separator {
@@ -77,9 +78,11 @@
 }
 
 .table-heading {
+  display    : inline-block;
   text-align : center;
-  height     : 15mm;
-  width      : 3cm;
+  overflow   : hidden;
+  //height     : 15mm;
+  //width      : 3cm;
 }
 
 .header {
